fixed style.css not showing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .main h1 {
     text-align:  left;
+    background-color:gold;
 }
 
 h1 {
